--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "serve": "vue-cli-service serve"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.6",
     "@vue/cli": "^5.0.8",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
+    "tailwindcss": "^4.0.6",
     "vue": "^3.5.13",
     "vuetify": "^3.7.11"
   },
