--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "main.js",
   "scripts": {
     "dev": "vite",
-    "build": "vue-cli-service build && electron",
+    "build": "vue-cli-service build",
+    "build-electron": "vue-cli-service build && electron",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
