--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,6 +8,8 @@ env:
   NAMESPACE: ${{ github.actor }}
   IMAGE_NAME: wifi-log-web
   TAG: $(date +%s)
+  
+  API_URL: https://www.waystone.be/wifi_log
 jobs:
 
   build:
@@ -17,7 +19,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --target dev --build-arg API_URL=lol --tag ghcr.io/${{ github.actor }}/wifi-log-web:latest
+      run: docker build . --file Dockerfile --target prod --build-arg API_URL=$API_URL --tag ghcr.io/${{ github.actor }}/wifi-log-web:latest
     - name: ghcr login
       run: echo ${{ secrets.GITHUB_TOKEN }} | docker login $REGISTRY -u $USERNAME --password-stdin
     - name: ghrc push
