--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "@vue/cli": "^5.0.8",
+    "@vuepic/vue-datepicker": "^11.0.1",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
     "tailwindcss": "^4.0.6",
