--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,6 +1,10 @@
 name: Docker Image CI
 on:
-  workflow_dispatch
+  pull_request:
+    types: ["closed"]
+    branches: ["main"]
+    
+  
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   USERNAME: ${{ github.actor }}
@@ -12,10 +16,10 @@ env:
   API_URL: https://www.waystone.be/api/wifi_log
   API_KEY: PLACEHOLDER_KEY
   BASE_URL: web/wifi_log
+  
 jobs:
-
-  build:
-
+  if_merged:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
@@ -26,4 +30,4 @@ jobs:
       run: echo ${{ secrets.GITHUB_TOKEN }} | docker login $REGISTRY -u $USERNAME --password-stdin
     - name: ghrc push
       run: docker push ghcr.io/${{ github.actor }}/wifi-log-web:latest
-    
+      
