--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,8 +1,5 @@
 name: Docker Image CI
 on:
-  pull_request:
-    types: ["closed"]
-    branches: ["main"]
   workflow_dispatch:
     
   
@@ -19,16 +16,35 @@ env:
   BASE_URL: web/wifi_log
   
 jobs:
-  if_merged:
-    if: github.event.pull_request.merged == true
+  lint:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --target prod --build-arg BASE_URL=$BASE_URL --build-arg API_URL=$API_URL --build-arg API_KEY=$API_KEY --tag ghcr.io/${{ github.actor }}/wifi-log-web:latest
-    - name: ghcr login
-      run: echo ${{ secrets.GITHUB_TOKEN }} | docker login $REGISTRY -u $USERNAME --password-stdin
-    - name: ghrc push
-      run: docker push ghcr.io/${{ github.actor }}/wifi-log-web:latest
+      - name: Checkout Code
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.head_ref }}   # checkout the correct branch name
+          fetch-depth: 0                # fetch the whole repo history
+
+      - name: Git Version
+        id: version
+        uses: codacy/git-version@2.7.1
+      
+      - name: Use the version
+        run: |
+          echo ${{ steps.version.outputs.version }}
+      - name: Use the previous version
+        run: |
+          echo ${{ steps.version.outputs.previous-version }}
+  #build_container:
+    #if: github.event.pull_request.merged == true
+   # runs-on: ubuntu-latest
+
+    #steps:
+    #- uses: actions/checkout@v4
+    #- name: Build the Docker image
+    #  run: docker build . --file Dockerfile --target prod --build-arg BASE_URL=$BASE_URL --build-arg API_URL=$API_URL --build-arg API_KEY=$API_KEY --tag ghcr.io/${{ github.actor }}/wifi-log-web:latest
+    #- name: ghcr login
+    #  run: echo ${{ secrets.GITHUB_TOKEN }} | docker login $REGISTRY -u $USERNAME --password-stdin
+    #- name: ghrc push
+    #  run: docker push ghcr.io/${{ github.actor }}/wifi-log-web:latest
       
