--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,6 @@ jobs:
           host: ${{ secrets.LINODE_HOST }}
           username: gh_deploy
           key: ${{ secrets.LINODE_DEPLOY_KEY }}
-          script: |
-            ./home/gh_deploy/deploy.sh
+          script: /home/gh_deploy/deploy.sh
             
                 
