--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
           username: gh_deploy
           key: ${{ secrets.LINODE_DEPLOY_KEY }}
           script: |
-            cd /home/gh_deploy
+            /home/gh_deploy
             ./deploy.sh
             
                 
