--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
           username: gh_deploy
           key: ${{ secrets.LINODE_DEPLOY_KEY }}
           script: |
+            echo " hi " 
+            pwd
             /home/gh_deploy
             ./deploy.sh
             
